--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Android_dev_carcool"
         tools:targetApi="31">
         <activity
+            android:name=".Landing_Page"
+            android:exported="false" />
+        <activity
             android:name=".User_Profile"
             android:exported="false" />
         <activity
