--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         <activity
             android:name=".User_Profile"
             android:exported="false" />
+        <activity android:name=".Login_Page"
+            android:exported="false"/>
+        <activity android:name=".Signup_Page"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
