--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,20 @@
         android:theme="@style/Theme.Android_dev_carcool"
         tools:targetApi="31">
         <activity
+            android:name=".Drop_Off_Publish_Ride"
+            android:exported="false" />
+        <activity
             android:name=".Landing_Page"
             android:exported="false" />
         <activity
             android:name=".User_Profile"
             android:exported="false" />
-        <activity android:name=".Login_Page"
-            android:exported="false"/>
-        <activity android:name=".Signup_Page"
-            android:exported="false"/>
+        <activity
+            android:name=".Login_Page"
+            android:exported="false" />
+        <activity
+            android:name=".Signup_Page"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
