--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,25 @@
         android:theme="@style/Theme.Android_dev_carcool"
         tools:targetApi="31">
         <activity
+            android:name=".No_Of_Passenger_Publish_Ride"
+            android:exported="false" />
+        <activity
+            android:name=".Booked_Ride"
+            android:exported="false" />
+        <activity
+            android:name=".comfort"
+            android:exported="false" />
+        <activity
+            android:name=".booking_time"
+            android:exported="false" />
+        <activity
+            android:name=".Confirm_Ride"
+            android:exported="false" />
+        <activity
+            android:name=".Request_Sent"
+            android:exported="false" />
+
+        <activity
             android:name=".Drop_Off_Publish_Ride"
             android:exported="false" />
         <activity
@@ -31,6 +50,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
